--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "flask>=3.1.2",
+    "flask-socketio>=5.5.1",
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
     "opencv-contrib-python>=4.11.0.86",
