--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "websockets>=15.0",
+    "flask>=3.1.2",
     "mediapipe>=0.10.21",
     "numpy>=1.26.4",
     "opencv-contrib-python>=4.11.0.86",
