integrate ngrok sdk

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,7 @@ dependencies = [
     "numpy>=1.26.4",
     "opencv-contrib-python>=4.11.0.86",
     "opencv-python>=4.11.0.86",
+    "pyngrok>=7.4.0",
+    "python-dotenv>=1.1.1",
+    "qrcode>=8.2",
 ]
